# optics

./: CMakeLists.txt  README.md  data.tsv  install.sh  plot.py
include/: dimension.hpp  optics.hpp
scripts/: main.cpp
src/: optics.cpp
